--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -89,6 +89,11 @@ header {
                 &:nth-of-type(4) {
                     background: #ffffff;
                     border-color: #d31c1c;
+                }
+
+                &:nth-of-type(5) {
+                    background: #de1e30;
+                    border-color: #ffffff;
                     margin-right: 10px;
                 }
             }
