--- a/scss_2/_header.scss
+++ b/scss_2/_header.scss
@@ -91,6 +91,12 @@ header {
                     border-color: #d31c1c;
                     margin-right: 10px;
                 }
+                
+                &:nth-of-type(5) {
+                    background: #de1e30;
+                    border-color: #ffffff;
+                    margin-right: 10px;
+                }
             }
         }
     }
