--- a/scss/_leftside.scss
+++ b/scss/_leftside.scss
@@ -233,6 +233,10 @@
                 }
             }
 
+            &:last-child {
+                margin-bottom: 20px;
+            }
+
             a {
                 display: block;
                 color: #e0e0e0 ;
