--- a/scss_5/_fixside.scss
+++ b/scss_5/_fixside.scss
@@ -2,8 +2,8 @@
     width: 60px;
     height: auto;
     position: fixed;
-    right: 0px;
-    top: 110px;
+    right: 5px;
+    top: 125px;
     z-index: 6;
 
     &.rwd {
@@ -64,51 +64,49 @@
 
     //搜尋列
     .search {
-        width: 300px;
-        height: 60px;
-        background: #ffffff;
-        box-shadow: 0px 0px 10px 0px #00000017;
-        border-radius: 3px 0px 0px 3px;
+        width: 200px;
+        height: 55px;
+        background: #f2f2f2;
         position: absolute;
         top: 0px;
-        left: 0px;
+        left: 65px;
         transition: 0.5s left;
+        box-shadow: -1px 0px 5px 0px #00000035;
         z-index: 2;
         
         &.open {
-            left: -240px;
-            background: #39547f;
+            left: -135px;
 
             .searchbut {
                 
                 &:hover,&:active,&.active {
-                    border-color: #ce1427;
-                    background: #ffffff;
+                    background: #de1e30;
 
                     .fixsideimg {
-                        background-position-y: 0%;
+                        background-position-y: 100%;
                     }
                     
                     span {
-                        color: #ce1427;
+                        color: #ffffff;
                     }
                 }
             }
         }
 
         .searchbut {
-            width: 60px;
-            height: 60px;
+            width: 55px;
+            height: 55px;
             cursor: pointer;
-            border-radius: 3px 0px 0px 3px;
-            float: left;
+            border-radius: 8px;
+            position: absolute;
+            top: 0px;
+            left: -60px;
             text-align: center;
-            border: solid 1px #ce1427;
             background: #ffffff;
+            box-shadow: 0px 0px 5px 0px #00000050;
 
             &:hover,&:active,&.active {
-                border-color: #ecf7ff;
-                background: linear-gradient(to bottom,#32496d 0%,#507abe 100%);
+                background: #de1e30;
 
                 span {
                     color: #ffffff;
@@ -121,27 +119,27 @@
 
             span {
                 font-size: 13px;
-                color: #1b1b1b;
+                color: #393939;
             }
 
             .fixsideimg {
                 width: 30px;
                 height: 29px;
-                background: url('../images/fixside_ic4.png') no-repeat;
+                background: url('../images/fixside_ic5.png') no-repeat;
                 background-size: 500%;
                 float: left;
-                margin: 7px 15px 3px 14px;
+                margin: 5px 5px 1px 11px;
                 pointer-events: none;
             }
 
         }
 
         input {
-            width: 140px;
+            width: 100px;
             height: 26px;
             font-size: 16px;
             padding-left: 10px;
-            border: solid 1px #d6d6d6;
+            border: solid 1px #dddddd;
             border-top: none;
             border-radius: 3px;
             float: left;
@@ -159,28 +157,26 @@
         button {
             width: 50px;
             height: 28px;
-            box-shadow: 0px 0px 10px 0px #00000017;
-            background: linear-gradient(to top,#ffffff 5%,#ebf0f2 26%,#ffffff 82%);
-            color: #ce1427;
+            background: #de1e30;
+            color: #ffffff;
             float: left;
             border-radius: 5px;
             font-size: 16px;
             margin: 16px 0px 16px 15px;
 
             &:hover,&:active,&.active {
-                color: #ffffff;
                 background: linear-gradient(to top,#d31c1c 0%,#bb092f 98%);
             }
         }
 
         //隊伍內容
         .searchbox {
-            width: 240px;
+            width: 200px;
             height: auto;
             float: left;
-            margin: -2px 0px 0px 62px;
+            margin: -5px 0px 0px 0px;
             overflow: hidden;
-            border-radius: 0px 0px 0px 3px;
+            box-shadow: -1px 3px 8px 0px #00000050;
 
             li {
                 width: 100%;
@@ -192,7 +188,7 @@
                 background: #ffffff;
                 cursor: pointer;
                 box-sizing: border-box;
-                color: #ce1427;
+                color: #333333;
 
                 &::before {
                     content: "";
@@ -200,9 +196,9 @@
                     height: 0px;
                     position: absolute;
                     border-style: solid;
-                    border-color: #678ac2 transparent;
+                    border-color: #a4a4a4 transparent;
                     border-width: 10px 8px 0px 8px;
-                    right: 40px;
+                    right: 20px;
                     top: 21px;
                     transform: rotate(-90deg);
                     transition: 0.3s all;
@@ -218,7 +214,7 @@
             }
 
             div {
-                background: #f5f5f5;
+                background: #ffffff;
                 width: 100%;
                 height: 0px;
                 overflow: hidden;
@@ -229,20 +225,30 @@
 
                 a {
                     display: block;
-                    width: 100%;
-                    height: 50px;
-                    line-height: 50px;
-                    color: #1b1b1b;
-                    border-bottom: solid 1px #c8c8c8;
+                    width: 90%;
+                    height: auto;
+                    background: #f5f6f7;
+                    color: #666666;
                     font-size: 14px;
+                    margin: 0px auto;
+                    box-sizing: border-box;
+                    padding: 10px 20px;
+
+                    &:nth-of-type(1) {
+                        border-radius: 3px 3px 0px 0px;
+                    }
+
+                    &:last-child {
+                        border-radius: 0px 0px 3px 3px;
+                        margin-bottom: 10px;
+                    }
 
                     &:hover,&:active,&.active {
-                        background: linear-gradient(to right,#d31c1c 0%,#bb092f 98%);
-                        color: #ffffff;
+                        background: #e3e3e3;
                     }
 
                     .team {
-                        display: block;
+                        display: none;
                         width: 30px;
                         height: 30px;
                         background: url('../images/fixside_team.png');
@@ -260,8 +266,7 @@
                     }
 
                     .num {
-                        float: right;
-                        margin: 0px 20px 0px 0px;
+                        color: #555555;
                     }
                 }
             }
@@ -270,27 +275,25 @@
 
     //功能列
     .fun {
-        width: 60px;
+        width: 55px;
         height: auto;
-        margin-top: 65px;
         position: relative;
         transition: all 0.3s;
+        margin: 65px 0px 0px 5px;
 
         a {
             display: block;
             width: 100%;
-            height: 62px;
+            height: 55px;
             background: #ffffff;
-            border-radius: 3px 0px 0px 3px;
+            border-radius: 8px;
             text-align: center;
-            margin-top: 3px;
-            border: solid 1px #ce1427;
+            margin-top: 10px;
             cursor: pointer;
-            box-shadow: 0px 0px 10px 0px #00000017;
+            box-shadow: 0px 0px 5px 0px #00000050;
 
             &:hover,&:active,&.active {
-                border-color: #ecf7ff;
-                background: linear-gradient(to bottom,#32496d 0%,#507abe 100%);
+                background: #de1e30;
 
                 span {
                     color: #ffffff;
@@ -302,17 +305,17 @@
             }
 
             span {
-                font-size: 13px;
-                color: #1b1b1b;
+                font-size: 12px;
+                color: #393939;
             }
 
             .fixsideimg {
                 width: 30px;
                 height: 30px;
-                background: url('../images/fixside_ic4.png') no-repeat;
+                background: url('../images/fixside_ic5.png') no-repeat;
                 background-size: 500%;
                 float: left;
-                margin: 8px 15px 3px 17px;
+                margin: 5px 5px 1px 13px;
                 &.img2 {
                     background-position-x: -30px;
                 }
