--- a/scss_5/_main.scss
+++ b/scss_5/_main.scss
@@ -29,7 +29,7 @@ main {
         height: 1000px;
         position: absolute;
         top: 0px;
-        background: linear-gradient(to top,#c8dfed 0%,#ddebf3 69%);
+        background: #f0f0f0;
         z-index: -999;
     }
 }
