--- a/css_2/style.css
+++ b/css_2/style.css
@@ -593,6 +593,9 @@ main .bg {
 .left ul li.onLive .live {
   display: block;
 }
+.left ul li:last-child {
+  margin-bottom: 20px;
+}
 .left ul li a {
   display: block;
   color: #454545;
