--- a/scss_4/_leftside.scss
+++ b/scss_4/_leftside.scss
@@ -226,6 +226,10 @@
                 }
             }
 
+            &:last-child {
+                margin-bottom: 20px;
+            }
+
             a {
                 display: block;
                 color: #1b1b1b;
