--- a/scss_5/_header.scss
+++ b/scss_5/_header.scss
@@ -7,6 +7,7 @@ header {
     position: relative;
     z-index: 10;
     overflow: hidden;
+    box-shadow: 0px 2px 6px 0px #00000050;
 
     &.mine {
         min-width: 1200px;
