--- a/scss_5/_rightside.scss
+++ b/scss_5/_rightside.scss
@@ -9,7 +9,7 @@
     z-index: 6;
     scrollbar-width: thin;
     background: #ffffff;
-    box-shadow: 0px 0px 5px 0px #00000049;
+    margin-top: 15px;
 
     &::-webkit-scrollbar {
         width: 5px;
@@ -22,7 +22,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-        background: linear-gradient(to top,#32496d 0%, #507abe 100%);
+        background: #999999;
         border-radius: 10px;
     }
     
@@ -30,14 +30,37 @@
     .statusWindow {
         width: 100%;
         height: 113px;
-        background: #f5f5f5;
+        background: #ffffff;
         position: relative;
         
         p {
-            background: #39547f;
-            color: #ffffff;
+            background: #ffffff;
+            color: #393939;
             padding: 7px 15px;
             font-size: 12px;
+            position: relative;
+
+            &::before {
+                content: "";
+                position: absolute;
+                width: 94%;
+                height: 1px;
+                background: #ebebeb;
+                bottom: -1px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+            &::after {
+                content: "";
+                position: absolute;
+                width: 1px;
+                height: 12px;
+                top: 50%;
+                left: 10px;
+                transform: translateY(-50%);
+                background: #de1e30;
+            }
         }
 
         ul {
@@ -45,28 +68,28 @@
             width: 95%;
             height: auto;
             left: 50%;
-            bottom: 1%;
+            bottom: 2%;
             transform: translateX(-50%);
 
             li {
-                padding: 5px 15px 3px;
+                padding: 5px 15px;
                 font-size: 14px;
                 position: relative;
-                background: #ffffff;
-                border-style: solid;
-                border-width: 1px;
-                border-color: transparent #e3e3e3 #bdbdbd;
-                color: #1b1b1b;
+                color: #454545;
                 margin-bottom: 3px;
+                border-bottom: solid 1px #ededed;
+
+                &:last-child {
+                    margin: 0px;
+                }
 
                 span {
                     float: right;
                     font-size: 12px;
-                    padding-top: 2px;
-                    color: #1f54ab;
+                    color: #08b30c;
 
                     &.onWait {
-                        color: #1b1b1b;
+                        color: #666666;
                     }
 
                     &.fail {
@@ -84,6 +107,7 @@
                     margin-left: 15px;
                     position: relative;
                     overflow: hidden;
+                    top: -2px;
 
                     &::before {
                         content: "";
@@ -119,11 +143,34 @@
         text-align: center;
 
         .title {
-            background: #39547f;
-            color: #ffffff;
+            background: #ffffff;
+            color: #393939;
             padding: 7px 15px;
             font-size: 12px;
             text-align: left;
+            position: relative;
+
+            &::before {
+                content: "";
+                position: absolute;
+                width: 94%;
+                height: 1px;
+                background: #ebebeb;
+                bottom: -1px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+            &::after {
+                content: "";
+                position: absolute;
+                width: 1px;
+                height: 12px;
+                top: 50%;
+                left: 10px;
+                transform: translateY(-50%);
+                background: #de1e30;
+            }
         }
 
         .teamWindow {
@@ -155,7 +202,7 @@
     
                 p {
                     font-size: 12px;
-                    color: #454545;
+                    color: #5a5a5a;
                     line-height: 20px;
                 }
             }
@@ -171,10 +218,10 @@
                     top: 50%;
                     left: 50%;
                     transform: translate(-50%,-50%);
-                    color: #595959;
+                    color: #8d8d8d;
     
                     span {
-                        color: #c31c2d;
+                        color: #de1e30;
                         font-size: 12px;
                     }
                 }
@@ -193,7 +240,7 @@
     .room {
         width: 100%;
         height: auto;
-        margin-top: 5px;
+        margin-top: 10px;
 
         //切換按鈕
         .twobut {
@@ -209,17 +256,21 @@
             }
 
             button {
-                width: 50%;
+                width: 49.5%;
                 height: 100%;
-                background: #e6e6e6;
-                color: #1b1b1b;
+                background: #f4f4f4;
+                color: #7f7f7f;
                 font-size: 14px;
                 float: left;
                 border-radius: 3px 3px 0px 0px;
 
                 &:hover,&:active,&.active {
-                    background: #39547f;
-                    color: #ffffff;
+                    background: #e6e6e6;
+                    color: #393939;
+                }
+
+                &:last-child {
+                    float: right;
                 }
             }
         }
@@ -230,11 +281,34 @@
             button {
                 width: 100%;
                 height: 100%;
-                background: #39547f;
-                color: #ffffff;
+                background: #ffffff;
+                color: #333333;
                 font-size: 12px;
                 text-align: left;
                 padding-left: 15px;
+                position: relative;
+
+                &::before {
+                    content: "";
+                    position: absolute;
+                    width: 96%;
+                    height: 1px;
+                    background: #ebebeb;
+                    bottom: -1px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                }
+    
+                &::after {
+                    content: "";
+                    position: absolute;
+                    width: 1px;
+                    height: 12px;
+                    top: 50%;
+                    left: 10px;
+                    transform: translateY(-50%);
+                    background: #de1e30;
+                }
             }
         }
 
@@ -259,7 +333,7 @@
             }
         
             &::-webkit-scrollbar-thumb {
-                background: linear-gradient(to top,#32496d 0%, #507abe 100%);
+                background: #999999;
                 border-radius: 10px;
             }
 
@@ -271,56 +345,60 @@
 
                 //選單
                 li {
-                    width: 100%;
+                    width: 96%;
                     height: 30px;
+                    margin: 0px auto;
                     line-height: 32px;
                     box-sizing: border-box;
                     position: relative;
                     overflow: hidden;
                     cursor: pointer;
                     background: #ffffff;
-                    border-style: solid;
-                    border-width: 1px;
-                    border-color: transparent transparent #f1f1f1 transparent;
+                    border-bottom: solid 1px #ebebeb;
+
+                    &:nth-of-type(1) {
+                        margin-top: 5px;
+                    }
+
+                    &:last-child {
+                        margin-bottom: 30px;
+                    }
 
                     &:hover,&:active {
-                        border-color: #d31c1c;
-                        box-shadow: 0px 0px 5px 0px #d31c1c49;
 
                         &::before {
                             transform: rotate(90deg);
-                            border-color: transparent #bb092f; 
                         }
 
                         .gameName {
-                            color: #ce1427;
+                            color: #de1e30;
+                            background: #e6e6e6;
                         }
 
                         .games {
-                            color: #ce1427;
+                            color: #de1e30;
                         }
                     }
 
                     &.active {
                         height: auto;
                         border-color: #ffffff;
-                        background: #39537e;
+                        background: #ffffff;
                         position: sticky;
-                        top: 0px;
+                        top: 5px;
                         z-index: 2;
 
                         &::before {
                             transform: rotate(90deg);
-                            border-color: transparent #bb092f;
                         }
 
                         .gameName {
-                            color: #ce1427;
-                            background: #ffffff;
+                            color: #de1e30;
+                            background: #e6e6e6;
                         }
 
                         .games {
-                            color: #ce1427;
+                            color: #de1e30;
                         }
                     }
 
@@ -331,7 +409,7 @@
                         height: 0px;
                         border-style: solid;
                         border-width: 7px 0px 7px 8px;
-                        border-color: transparent #678ac2;
+                        border-color: transparent #a4a4a4;
                         right: 25px;
                         top: 8px;
                         transition: 0.3s all;
@@ -360,11 +438,10 @@
                     .innerList {
                         width: 96%;
                         height: 70px;
-                        background: #ffffff;
+                        background: #f1f1f1;
                         position: relative;
                         cursor: default;
                         border-radius: 5px;
-                        box-shadow: 0px 0px 5px 0px #00000049;
                         margin: 0px auto 10px;
 
                         &:nth-of-type(1) {
@@ -383,7 +460,7 @@
 
                             span {
                                 font-weight: bold;
-                                color: #ce1427;
+                                color: #de1e30;
 
                                 .situation {
                                     font-weight: normal;
@@ -403,7 +480,7 @@
                                             height: 19px;
                                             top: -1px;
                                             left: -10px;
-                                            background: url('../images/liveBg2.png') no-repeat;
+                                            background: url('../images/liveBg3.png') no-repeat;
                                             z-index: -1;
                                         }
                                     }
@@ -416,13 +493,13 @@
                                 bottom: 0px;
                                 width: 70px;
                                 height: 30px;
-                                background: linear-gradient(to top,#ffffff 5%,#ebf0f2 26%,#ffffff 82%);
+                                background: #ffffff;
                                 border-radius: 3px;
                                 box-shadow: 1px 2px 8px 0px #00000049;
                                 color: #ce1427;
 
                                 &:hover,&:active,&.active {
-                                    background: #cc1622;
+                                    background: #de1e30;
                                     color: #ffffff;
                                     box-shadow: none;
                                 }
@@ -432,7 +509,7 @@
                 }
             }
         }
-        //聊天室
+        //即時注單
         .bettingStatus {
             display: none;
             width: 100%;
@@ -441,7 +518,7 @@
             overflow-y: auto;
             overflow-x: hidden;
             scrollbar-width: thin;
-            background: #39547f;
+            background: #e6e6e6;
 
             &::-webkit-scrollbar {
                 width: 5px;
@@ -454,7 +531,7 @@
             }
         
             &::-webkit-scrollbar-thumb {
-                background: linear-gradient(to top,#32496d 0%, #507abe 100%);
+                background: #999999;
                 border-radius: 10px;
             }
 
